fix wrapping words on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,6 +65,6 @@ $link-color: $sidebar-bg-color;
   --color-primary: #ac4142;
 }
 
-code {
+p {
   overflow-wrap: break-word;
 }
